@@ -16,6 +16,9 @@
 
 
 xflr5 v6.39 June xxxth, 2017
+	- modified the calculation of the lift coefficient at each span station in VLM and Panel Analysis.
+	  Is now F.dot(SurfaceNormal)/q.S instead of F.dot(WindNormal)/q.S formerly. Increases slightly the viscous drag
+	  and the viscous moments as a side effect.
 	- implemented a more robust process to save the project files
 	- disabled the Neumann boundary condition for the 3d panel method
 
